# code_study

./: a.out  bitmask  bitmask.cpp  capture.cpp  cpp17test.cpp  mutex.cpp  ptr.cpp  range.h  size.cpp  uniq.cpp  virtual.cpp
acpid/: listen  main.cpp
armstrong/: main.cpp  n
bits/: a.out  main.cpp
block_call/: async  blocker  blockera  main.cpp  older.cpp
bst/: bst.cpp  bst.hpp  main.cpp
c/: binary_convert.c  binary_search.c  binary_tree.c  bst.c  day_sentence.cpp  dyn_arr.c  float.c  freq.c  freq_simp.c  graph.c  main.cpp  max_four.c  merge_sort  merge_sort.c  num.c  primes.c  print.c  ptr_v_diff.c  quick  rev_string.c  rps.cpp  three_points.c  triangles.c
code_chef/: 2numbers  2numbers.cpp  main.cpp  run
config/: configtest
copyv/: main.cpp  run
datetime/: main.cpp  time
dbtemplate/: main.cpp
dbus/: listen  main.cpp  old_main.cpp  raw_dbus_main.cpp
decay/: a.out  decay.cpp
either/: a.out  main.cpp
either2/: test.cpp
epoll/: a.out  epoll.hpp  main.cpp  test_application.sh
euler/: file.txt  functions.hpp  main  main.cpp  massive_int.hpp  nonabundantsum  numlengthcount  onetotwenty  palindrome  permut  permutation  sides  sqsum  sum  tri_divisibles
executor/: README.txt  a.out  compile  executor.hpp  execxx.hpp  main.cpp  tags  test_application.sh
factory/: a.out  factory.cpp
false/: a.out  main.cpp
functor/: a.out  main.cpp
geo/: a.out  main.cpp
protoboost/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  protoboost  tags
protoboost/include/: AsioAdapting.h  ProtobufHelpers.cpp  ProtobufHelpers.h  TrxMessage.pb.cc  TrxMessage.pb.h  TrxMessage.proto
x11/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  x11
(+558 files in other folders)
